--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   body {
     font-family: 'DM Sans', sans-serif;
-    background: var(--white);
+    background: var(--dark);
     color: var(--text);
     min-height: 100vh;
     display: flex;
