--- a/index.html
+++ b/index.html
@@ -759,7 +759,7 @@
             <div class="card-badge-dot"></div>
             Smart AI Screening
           </div>
-          <div class="card-title">Diagnosis Awal Keluhan Gigi</div>
+          <div class="card-title">Skrining dan Arahan Rujukan</div>
           <div class="card-desc">Ceritakan keluhan Anda dan sistem AI kami akan menganalisis untuk menentukan tingkat kompleksitas dan operator yang berwenang.</div>
           
           <div style="background:var(--surface2);border-radius:14px;padding:14px;margin-bottom:14px;display:flex;align-items:center;gap:12px;border:1px solid rgba(255,255,255,0.06);">
